# resxguard

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  encoding.rs  error.rs  lib.rs  main.rs  mojibake.rs  report.rs  resx.rs  ui.rs
src/commands/: check.rs  import.rs  mod.rs  repair.rs  set.rs
tests/: cli.rs
tests/fixtures/: clean.fr.resx  corrupted.fr.resx
